samples/_failures_safe/1761558349_0d2606_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7407c90f.c: In function ‘main’:
./samples/SAFE/__tmp_7407c90f.c:143:9: error: expected expression at end of input
  143 |         if (
      |         ^~
./samples/SAFE/__tmp_7407c90f.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7407c90f.c:143:9: error: expected declaration or statement at end of input
